# vault-os

./: .env.example  .gitignore  IDEAS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
api/: pyproject.toml
api/src/vault_api/: __init__.py  auth.py  bus.py  config.py  discover.py  events.py  main.py  modules.py  obsidian.py  rag.py  router.py  watcher.py
api/tests/: conftest.py  test_auth.py  test_events_roundtrip.py  test_gpu_deck_module.py  test_modules.py  test_router.py  test_task_runner.py  test_watcher_e2e.py
desktop/: package.json
desktop/src/: App.css  App.tsx  api.ts  browser-guard.css  main.tsx
desktop/src-tauri/: Cargo.toml  M1-spike-result.json  tauri.conf.json
docs/: BACKLOG-plane-issues.md  GOAL-prompt-fable5.md  M1-decision-2026-07-03.md  M5.1-results-2026-07-04.md  MODULE-CONTRACT.md  PRD-vault-os.md  RESEARCH-2026-07-03-vault-os-architecture.md  RESEARCH-2026-07-04-vault-tui.md  TUI-DECISION-2026-07-04.md
indexer/: pyproject.toml
indexer/src/vault_indexer/: __init__.py  graph.py
indexer/tests/: test_graph.py
modules/build-agent/: module.py
modules/gpu-deck/: module.py
modules/grafana/: module.py
modules/hello-module/: module.py
modules/plane-sync/: module.py
shared/: events.ts  package.json  typecheck.ts
tools/: cloud_proxy.py  emit_build_events.py  hf_pull.py  push_backlog_to_plane.py  run_bloom_spike.sh  run_embed_worker.sh  run_worker_4060ti.sh  run_worker_7900xtx.sh  run_worker_r9700.sh  test_vault_tui.py  test_worker.sh  vault  vault-top  vault_top.py
(+23 files in other folders)
