[project]
name = "vault-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brice Neal", email = "85902399+deresolution20@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
    "vault-indexer",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.uv.sources]
vault-indexer = { path = "../indexer", editable = true }
