[project]
name = "vault-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brice Neal", email = "85902399+deresolution20@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
